[package]
name = "satonomics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
# bincode = { version = "2.0.0-rc.3", features = ["serde"] }
bincode = { git = "https://github.com/bincode-org/bincode.git", features = [
    "serde",
] }
chrono = "0.4.35"
color-eyre = "0.6.3"
itertools = "0.12.1"
regex = "1.10.3"
reqwest = { version = "0.12.0", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0.114" }
tokio = { version = "1.36.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["compression-full"] }
